[package]
name = "devinfo_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "devinfo"
crate-type = ["cdylib"]


[dependencies]
mlua = {version = "0.11.5", features = ["module", "lua54"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_SystemInformation"]}